# Zeklewa_ANPR

Workspace/VP9/Project/anpr_20180224/: CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  DartConfiguration.tcl  README
Workspace/VP9/Project/anpr_20180224/PlateDetector/: CMakeLists.txt
Workspace/VP9/Project/anpr_20180224/PlateDetector/include/: CascadeTrainingInputData.h  CascadeTrainingStrategy.h  IPlateDetect.h  IPlateDetectStrategy.h  PlateDetector.h  PlateDetectorInputData.h  PlateRegion.h
Workspace/VP9/Project/anpr_20180224/PlateDetector/src/: CascadeTrainingStrategy.cpp  IPlateDetect.cpp  IPlateDetectStrategy.cpp  PlateDetector.cpp
Workspace/VP9/Project/anpr_20180224/PlateExtractor/: CMakeLists.txt
Workspace/VP9/Project/anpr_20180224/PlateExtractor/include/: TextReader.h  caffe_model.h  keras_model.h
Workspace/VP9/Project/anpr_20180224/PlateExtractor/src/: TextReader.cpp  caffe_model.cpp  keras_model.cpp
Workspace/VP9/Project/anpr_20180224/PlateRecognizationFramework/: CMakeLists.txt  Main.cpp
Workspace/VP9/Project/anpr_20180224/PlateRecognizationFramework/include/: Crop.h  IOData.h  ObjectUtils.h  PlateReader.h  PlateRecognitionAction.h  PlateRecognizator.h  VideoReader.h  bckgrnd_subs.h  blurriness.h  connectCMS.h  estimate_square_cascade.h  publicValue.h
Workspace/VP9/Project/anpr_20180224/PlateRecognizationFramework/include/Crop/: common_function.h  crop_char_long.h  crop_char_square.h  crop_longplate_corner.h  cropping_v2.h  cropping_v2_color.h  cropping_v3.h  cropping_v3_color.h
Workspace/VP9/Project/anpr_20180224/PlateRecognizationFramework/include/GroupPlates/: group_plates.h  r_distance.h  tracking_thanhnn.h  trackingkalman.h
Workspace/VP9/Project/anpr_20180224/PlateRecognizationFramework/src/: Crop.cpp  IOData.cpp  ObjectUtils.cpp  PlateReader.cpp  PlateRecognitionAction.cpp  PlateRecognizator.cpp  VideoReader.cpp  base64.cpp  bckgrnd_subs.cpp  connectCMS.cpp  estimate_square_cascade.cpp
Workspace/VP9/Project/anpr_20180224/data/: Config.txt  para_log.txt
Workspace/VP9/Project/anpr_20180224/data/TextReaderdata/: cnn-20171115_3232.dump  init_net.pb  predict_net.pb
Workspace/VP9/Project/anpr_20180224/data/plateCascade/: 2620_RectWhitePlate_Universal.xml  Long_Color_Nov11_5616_noWhite.xml  Rect_Color_Oct26.xml  white_long_5616_Sep15.xml
Workspace/VP9/Project/anpr_20180224/include/: Amvideocap.h  readme.txt  tracking.hpp
(+35 files in other folders)
